--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -24,3 +24,7 @@ jobs:
             ${{ runner.os }}-go-
       - run: |
           GOPROXY=https://proxy.golang.org,direct GOSUMDB=off go run ./main.go
+      - name: Commit results
+        uses: EndBug/add-and-commit@v9
+        with: 
+          add: "*.json"
