chore: Update workflow script
Signed-off-by: Nithish <nithishkarthik01@gmail.com>

--- a/.github/workflows/script.yml
+++ b/.github/workflows/script.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Commit results
         uses: EndBug/add-and-commit@v9
         with: 
-          add: "*.json"
+          add: "output/"
